--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 			<meta property="og:description" content="이슬 영섭 결혼식에 초대합니다."/>
 	<meta property="og:image" content="https://kimysub.github.io/wedding.github.io/images/Couple.jpg"/>
       	<title>이슬 &amp; 영섭</title>
-        <link rel="icon" href="images/heart7.png">
+        <link rel="icon" href="images/favicon.jpg">
         <!-- Bootstrap -->
     	<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" type="text/css" media="screen" />
         <!-- Pace -->
@@ -430,7 +430,7 @@ map.relayout();
 
                         	<div class="section-title animation fadeInUp">
                         		<h2>
-                            		우리 <img src="images/heart7.png" alt=""> 갤러리
+                            		우리 <img src="images/heart7.png" width="100" alt=""> 갤러리
                             	</h2>
 
                           	</div>
