--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
                             <div class="his-her-name">
                         		<h2 class="SF-font text-center">김영섭         
-								<a href="tel:01034472936">전화걸기</a></h2>
+								<a href="tel:01034472936"><img src="./images/call.png" alt=""></a></h2>
                                 <div class="heart-wrapper">
                                 	<div class="de-icon circle medium-size custom-heart">
             							<i class="de-icon-heart"></i>
@@ -615,7 +615,7 @@ map.relayout();
 
 <a id="create-kakao-link-btn" href="javascript:;">
   <img
-    src="https://developers.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png"
+    src="./images/kakao.png"
   />
 </a>
 <script type="text/javascript">
