--- a/index.html
+++ b/index.html
@@ -212,7 +212,9 @@
 
                             <div class="his-her-name">
                         		<h2 class="SF-font text-center">김영섭         
-								<a href="tel:01034472936"><img src="./images/call.png" alt=""></a></h2>
+								<a href="tel:01034472936"><img src="./images/call.png" width=80 alt=""></a>
+								<a href="sms:01034472936"><img src="./images/sms.png" width=80 alt=""></a>
+								</h2>
                                 <div class="heart-wrapper">
                                 	<div class="de-icon circle medium-size custom-heart">
             							<i class="de-icon-heart"></i>
