--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poor+Story&display=swap');
 /*@import url('https://fonts.googleapis.com/css2?family=Sunflower:wght@300&display=swap');*/
 	.SF-font{
-		font-family: 'Sunflower', sans-serif;
+		font-family: 'Poor Story', cursive;
+		}
 </style>
         <!-- Theme CSS -->
     	<link href="css/style.css" rel="stylesheet" media="screen">
@@ -211,9 +212,9 @@
                             </div><!--END of PHOTO-ITEM-->
 
                             <div class="his-her-name">
-                        		<h2 class="SF-font text-center">김영섭         
-								<a href="tel:01034472936"><img src="./images/call.png" width=80 alt=""></a>
-								<a href="sms:01034472936"><img src="./images/sms.png" width=80 alt=""></a>
+                        		<h2 class="SF-font text-center">신랑 김영섭         
+								<a href="tel:01034472936"><img src="./images/call.png" width=50 alt=""></a>
+								<a href="sms:01034472936"><img src="./images/sms.png" width=50 alt=""></a>
 								</h2>
                                 <div class="heart-wrapper">
                                 	<div class="de-icon circle medium-size custom-heart">
@@ -617,7 +618,7 @@ map.relayout();
 
 <a id="create-kakao-link-btn" href="javascript:;">
   <img
-    src="./images/kakao.png"
+    src="https://developers.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png"
   />
 </a>
 <script type="text/javascript">
