--- a/index.html
+++ b/index.html
@@ -97,11 +97,8 @@
                     	<div class="container">
                         	<div class="row">
                         		<div class="col-md-offset-3 col-md-6 animation delay1 fadeInUp">
-
-                                    <div id="invited" class="text-center">
-                                    	You're Invited
                                     </div>
-                                    <div class="banner-text withlove medium light">
+                                    <div class="banner-text withlove medium">
                                     	<h1 class="SF-font">이슬 영섭 결혼합니다.</h1>
                                     </div>
                                     <div id="banner-date">
