--- a/index.html
+++ b/index.html
@@ -98,9 +98,8 @@
                         	<div class="row">
                         		<div class="col-md-offset-3 col-md-6 animation delay1 fadeInUp">
                                     </div>
-                                    <div class="banner-text withlove medium">
+                            		<h1><img src="images/heart7.png" width="50" alt=""></h1>
                                     	<h1 class="SF-font">이슬 영섭 결혼합니다.</h1>
-                                    </div>
                                     <div id="banner-date">
                                     	- 2021.09.04 오후 5시 -</br> 
 										엘블레스 웨딩홀
@@ -430,7 +429,7 @@ map.relayout();
 
                         	<div class="section-title animation fadeInUp">
                         		<h2>
-                            		우리 <img src="images/heart7.png" width="100" alt=""> 갤러리
+                            		우리 <img src="images/heart7.png" width="50" alt=""> 갤러리
                             	</h2>
 
                           	</div>
