--- a/index.html
+++ b/index.html
@@ -213,16 +213,9 @@
 								<a href="sms:01034472936"><img src="./images/sms.png" width=50 alt=""></a>
 								</h2>
                                 <div class="heart-wrapper">
-                                	<div class="de-icon circle medium-size custom-heart">
-            							<i class="de-icon-heart"></i>
-            						</div>
+                            		<div><img src="images/heart7.png" width="50" alt=""></div>
                                 </div>
                             </div>
-
-                            <p class="blurb animation fadeInLeft text-center">
-                            	1987년생
-                            </p>
-
                         </div>
 
                         <div class="col-md-6">
@@ -242,12 +235,11 @@
                             </div><!--END of PHOTO-ITEM-->
 
                             <div class="his-her-name">
-                        		<h2 class="SF-font text-center">정이슬</h2>
+                        		<h2 class="SF-font text-center">신부 정이슬
+								<a href="tel:01034472936"><img src="./images/call.png" width=50 alt=""></a>
+								<a href="sms:01034472936"><img src="./images/sms.png" width=50 alt=""></a>
+								</h2>
                             </div>
-
-                            <p class="blurb animation fadeInRight text-center">
-                            	1987년생
-                            </p>
 
                         </div>
                     </div>
