--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                         	<div class="photo-item frame-border animation fadeInLeft">
 
                              	<!--PHOTO-->
-                               	<img src="./images/YS_Kim.jpg" alt="" class="hover-animation image-zoom-in">
+                               	<img src="./images/YS_Kim.jpg" width=200 alt="" class="hover-animation image-zoom-in">
 
                                	<!--PHOTO OVERLAY-->
                            		<div class="layer wh100 hidden-black-overlay hover-animation fade-in">
@@ -224,7 +224,7 @@
                         	<div class="photo-item frame-border animation fadeInRight">
 
                              	<!--PHOTO-->
-                               	<img src="./images/YS_Jung.jpg" alt="" class="hover-animation image-zoom-in">
+                               	<img src="./images/YS_Jung.jpg" width=200 alt="" class="hover-animation image-zoom-in">
 
                                	<!--PHOTO OVERLAY-->
                            		<div class="layer wh100 hidden-black-overlay hover-animation fade-in">
