--- a/index.html
+++ b/index.html
@@ -195,22 +195,18 @@
 
                         	<!--PHOTO-ITEM-->
                         	<div class="photo-item frame-border animation fadeInLeft">
-
                              	<!--PHOTO-->
-                               	<img src="./images/YS_Kim.jpg" width=200 alt="" class="hover-animation image-zoom-in">
+                               	<img src="./images/YS_Kim.jpg" alt="" class="hover-animation image-zoom-in">
 
                                	<!--PHOTO OVERLAY-->
                            		<div class="layer wh100 hidden-black-overlay hover-animation fade-in">
                             	</div><!--END of PHOTO OVERLAY-->
-
-
-
                             </div><!--END of PHOTO-ITEM-->
 
                             <div class="his-her-name">
                         		<h2 class="SF-font text-center">신랑 김영섭         
-								<a href="tel:01034472936"><img src="./images/call.png" width=50 alt=""></a>
-								<a href="sms:01034472936"><img src="./images/sms.png" width=50 alt=""></a>
+								<a href="tel:01023868083"><img src="./images/call.png" width=50 alt=""></a>
+								<a href="sms:01023868083"><img src="./images/sms.png" width=50 alt=""></a>
 								</h2>
                                 <div class="heart-wrapper">
                             		<div><img src="images/heart7.png" width="50" alt=""></div>
@@ -224,7 +220,7 @@
                         	<div class="photo-item frame-border animation fadeInRight">
 
                              	<!--PHOTO-->
-                               	<img src="./images/YS_Jung.jpg" width=200 alt="" class="hover-animation image-zoom-in">
+                               	<img src="./images/YS_Jung.jpg" alt="" class="hover-animation image-zoom-in">
 
                                	<!--PHOTO OVERLAY-->
                            		<div class="layer wh100 hidden-black-overlay hover-animation fade-in">
