--- a/index.html
+++ b/index.html
@@ -488,6 +488,7 @@ var staticMapContainer  = document.getElementById('staticMap'), // 이미지 지
 // 이미지 지도를 생성합니다
 var staticMap = new kakao.maps.StaticMap(staticMapContainer, staticMapOption);
 </script>
+</div>
 
 <div align='center'>
 <div id="map" style="width:350px;height:300px;"></div>
