--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                             	<a href="#gallery-section">갤러리</a>
                             </li>
                             <li>
-                            	<a href="#where-when">시간과 장소</a>
+                            	<a href="#where-when">오시는 길</a>
                             </li>
 
 
@@ -238,7 +238,7 @@
 
                         	<div class="section-title animation fadeInUp">
                         		<h2>
-                            		우리 <img src="images/heart7.png" width="50" alt=""> 갤러리
+                            		<img src="images/heart7.png" width="50" alt=""> 갤러리
                             	</h2>
 
                           	</div>
@@ -410,7 +410,7 @@
 
                         	<div class="section-title animation fadeInUp">
                         		<h2>
-                            		시간과 장소
+                            		오시는 길
                             	</h2>
 
 
@@ -425,23 +425,11 @@
                         <!-- SECTION TITLE -->
                     	<div class="col-md-12 text-center">
 
-                        	<div class="banner-text dark full animation fadeIn">
+                        	<div class="banner-text">
 
-                                  <div class="row">
-                                		<div class="col-md-4">
                                         	<h3>2021년 9월 4일</h3>
-                                        </div>
-                                        <div class="col-md-4">
-                                        	<div class="border-column">
                                         		<h3>오후 5시</h3>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-4">
                                         	<h3>엘블레스 웨딩홀</h3>
-                                        </div>
-
-                                  </div>
-
 
                             </div>
 
