--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                             	<a href="#gallery-section">갤러리</a>
                             </li>
                             <li>
-                            	<a href="#where-when">오시는 길</a>
+                            	<a href="#where-when">시간과 장소</a>
                             </li>
 
 
@@ -179,28 +179,6 @@
         	</header> <!-- END of NAVIGATION -->
 
 		</section><!-- ENF of MAIN SLIDER -->
-
-                    	<div class="col-md-12 text-center">
-
-                        	<div class="banner-text">
-                                        	<h3>2021년 9월 4일 오후 5시</h3>
-                            </div>
-
-                        </div>
-
-  <div class='calendar'>
-    <div class='month'>2021년 9월</div>
-    <div>
-      <table class='table day'>
-        <tr><td style='color:#ff0000; text-align:center'>일</td><td style="text-align:center">월</td><td style="text-align:center">화</td><td style="text-align:center">수</td><td style="text-align:center">목</td><td style="text-align:center">금</td><td style="color:#ff0000; text-align:center">토</td></tr>
-        <tr><td></td><td></td><td></td><td style="text-align:center">1</td><td style="text-align:center">2</td><td style="text-align:center">3</td><td style='background-color:rgba(255, 0, 0, 0.4); color:006400;text-align:center'>4</td></tr>
-        <tr><td style="color:#ff0000; text-align:center">5</td><td style="text-align:center">6</td><td style="text-align:center">7</td><td style="text-align:center">8</td><td style="text-align:center">9</td><td style="text-align:center">10</td><td style="color:#ff0000; text-align:center">11</td></tr>
-        <tr><td style="color:#ff0000; text-align:center">12</td><td style="text-align:center">13</td><td style="text-align:center">14</td><td style="text-align:center">15</td><td style="text-align:center">16</td><td style="text-align:center">17</td><td style="color:#ff0000; text-align:center">18</td></tr>
-        <tr><td style="color:#ff0000; text-align:center">19</td><td style="text-align:center">20</td><td style="text-align:center">21</td><td style="text-align:center">22</td><td style="text-align:center">23</td><td style="text-align:center">24</td><td style="color:#ff0000; text-align:center">25</td></tr>
-        <tr><td style="color:#ff0000; text-align:center">26</td><td style="text-align:center">27</td><td style="text-align:center">28</td><td style="text-align:center">29</td><td style="text-align:center">30</td><td></td><td></td></tr>
-      </table>
-    </div>
-  </div>
 
         <!--CONTENT SECTION-->
         <section id="content">
@@ -431,14 +409,39 @@
 
                         	<div class="section-title animation fadeInUp">
                         		<h2>
-                            		오시는 길
+                            		<img src="images/heart7.png" width="50" alt=""> 시간과 장소
                             	</h2>
                           	</div>
                         </div>
                    </div> <!-- END of ROW-1 -->
 
+                   <!-- ROW-2 -->
+                	<div class="row">
+
+                        <!-- SECTION TITLE -->
+                    	<div class="col-md-12 text-center">
+                        	<div class="banner-text">
+                                        	<h3>시간: 2021년 9월 4일 오후 5시</h3>
+                            </div>
+                        </div>
+                   </div> <!-- END of ROW-2 -->
+  <div class='calendar'>
+    <div class='month'>2021년 9월</div>
+    <div>
+      <table class='table day'>
+        <tr><td style='color:#ff0000; text-align:center'>일</td><td style="text-align:center">월</td><td style="text-align:center">화</td><td style="text-align:center">수</td><td style="text-align:center">목</td><td style="text-align:center">금</td><td style="color:#ff0000; text-align:center">토</td></tr>
+        <tr><td></td><td></td><td></td><td style="text-align:center">1</td><td style="text-align:center">2</td><td style="text-align:center">3</td><td style='background-color:rgba(255, 0, 0, 0.4); color:006400;text-align:center'>4</td></tr>
+        <tr><td style="color:#ff0000; text-align:center">5</td><td style="text-align:center">6</td><td style="text-align:center">7</td><td style="text-align:center">8</td><td style="text-align:center">9</td><td style="text-align:center">10</td><td style="color:#ff0000; text-align:center">11</td></tr>
+        <tr><td style="color:#ff0000; text-align:center">12</td><td style="text-align:center">13</td><td style="text-align:center">14</td><td style="text-align:center">15</td><td style="text-align:center">16</td><td style="text-align:center">17</td><td style="color:#ff0000; text-align:center">18</td></tr>
+        <tr><td style="color:#ff0000; text-align:center">19</td><td style="text-align:center">20</td><td style="text-align:center">21</td><td style="text-align:center">22</td><td style="text-align:center">23</td><td style="text-align:center">24</td><td style="color:#ff0000; text-align:center">25</td></tr>
+        <tr><td style="color:#ff0000; text-align:center">26</td><td style="text-align:center">27</td><td style="text-align:center">28</td><td style="text-align:center">29</td><td style="text-align:center">30</td><td></td><td></td></tr>
+      </table>
+    </div>
+  </div>
+
                     <!-- ROW-3 -->
 <!-- 이미지 지도를 표시할 div 입니다 -->
+<div align='center'><h2>오시는 길</h2>
 <div align='center'>
 <div id="staticMap" style="width:356px;height:350px;"></div>
 <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=4114917bba98b382c335ebc0f0f8eba2"></script>
@@ -465,10 +468,12 @@ var staticMap = new kakao.maps.StaticMap(staticMapContainer, staticMapOption);
 </script>
 </div>
 
-                            	<ul><h2>엘블레스</h2>
+                            	<ul><h3>엘블레스</h3>
                             	<li>서울특별시 서초구 강남대로 213번지</li>
                             	<li>(스포타임 지하1층)</li>
-                            	<li>TEL 02.526.0300</li>
+                            	<li>TEL 02.526.0300
+								<a href="tel:025260300"><img src="./images/call.png" width=30 alt=""></a>
+								</li>
 								</ul>
 
 
@@ -493,7 +498,11 @@ var staticMap = new kakao.maps.StaticMap(staticMapContainer, staticMapOption);
 							                            </div>
 							                            <h3 class="inline">승용차</h3>
 							                            <ul>
-							                            	<li>서초IC에서 양재역 방면으로 나오신후 양재지하차도로 진입하지 말고 양재역사거리에서 성남방향으로 우회전합니다. 우회전후 60m 직진하시면 우측에 엘블레스가 있습니다.</li>
+							                            	<li>서초IC에서 양재역 방면으로 나오신후</li>
+															<li>양재지하차도로 진입하지 말고 양재역사거리에서 </li>
+															<li>성남방향으로 우회전합니다. </li>
+															<li>우회전후 60m 직진하시면 </li>
+															<li>우측에 엘블레스가 있습니다.</li>
 							                            </ul>
                         </div>
 
