--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
 
                     <!-- ROW-3 -->
 <!-- 이미지 지도를 표시할 div 입니다 -->
-<div align='center'><h2>오시는 길</h2>
+<div align='center'><h2>오시는 길</h2></div>
 <div align='center'>
 <div id="staticMap" style="width:356px;height:350px;"></div>
 <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=4114917bba98b382c335ebc0f0f8eba2"></script>
