--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                     	<div class="col-md-offset-2 col-md-8 text-center">
 
                         	<div class="section-title animation fadeInUp">
-                        		<h2>
+                        		<h2 class="SF-font">
                             		<img src="images/heart7.png" width="50" alt=""> 갤러리
                             	</h2>
 
@@ -408,7 +408,7 @@
                     	<div class="col-md-offset-2 col-md-8 text-center">
 
                         	<div class="section-title animation fadeInUp">
-                        		<h2>
+                        		<h2 class="SF-font">
                             		<img src="images/heart7.png" width="50" alt=""> 시간과 장소
                             	</h2>
                           	</div>
@@ -421,12 +421,12 @@
                         <!-- SECTION TITLE -->
                     	<div class="col-md-12 text-center">
                         	<div class="banner-text">
-                                        	<h3>시간: 2021년 9월 4일 오후 5시</h3>
+                                        	<h3 class="SF-font">시간: 2021년 9월 4일 오후 5시</h3>
                             </div>
                         </div>
                    </div> <!-- END of ROW-2 -->
   <div class='calendar'>
-    <div class='month'>2021년 9월</div>
+    <div class='month SF-font'>2021년 9월</div>
     <div>
       <table class='table day'>
         <tr><td style='color:#ff0000; text-align:center'>일</td><td style="text-align:center">월</td><td style="text-align:center">화</td><td style="text-align:center">수</td><td style="text-align:center">목</td><td style="text-align:center">금</td><td style="color:#ff0000; text-align:center">토</td></tr>
@@ -441,7 +441,7 @@
 
                     <!-- ROW-3 -->
 <!-- 이미지 지도를 표시할 div 입니다 -->
-<div align='center'><h2>오시는 길</h2></div>
+<div align='center'><h2 class="SF-font">오시는 길</h2></div>
 <div align='center'>
 <div id="staticMap" style="width:356px;height:350px;"></div>
 <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=4114917bba98b382c335ebc0f0f8eba2"></script>
@@ -468,11 +468,11 @@ var staticMap = new kakao.maps.StaticMap(staticMapContainer, staticMapOption);
 </script>
 </div>
 
-                            	<ul><h3>엘블레스</h3>
-                            	<li>서울특별시 서초구 강남대로 213번지</li>
-                            	<li>(스포타임 지하1층)</li>
-                            	<li>TEL 02.526.0300
-								<a href="tel:025260300"><img src="./images/call.png" width=30 alt=""></a>
+                            	<ul><h3 class="SF-font">엘블레스</h3>
+                            	<li class="SF-font">서울특별시 서초구 강남대로 213번지</li>
+                            	<li class="SF-font">(스포타임 지하1층)</li>
+                            	<li class="SF-font">TEL 02.526.0300
+								<a href="tel:025260300"><img src="./images/call.png" width=15 alt=""></a>
 								</li>
 								</ul>
 
@@ -481,28 +481,28 @@ var staticMap = new kakao.maps.StaticMap(staticMapContainer, staticMapOption);
                        		<div class="de-icon circle small-size inline" style="background-color:#f6700e">
                             	<i class="de-icon-truck"></i>
                             </div>
-                            <h3 class="inline">버스</h3>
+                            <h3 class="inline SF-font">버스</h3>
 														<ul>
-														<li>양재역, 서초문화예술회관에서 하차</li>
+														<li class="SF-font">양재역, 서초문화예술회관에서 하차</li>
 								</ul>
 
 							<div class="de-icon circle small-size inline" style="background-color:#0d9a48">
                             	<i class="de-icon-rebel"></i>
                             </div>
-                            <h3 class="inline">지하철</h3>
+                            <h3 class="inline SF-font">지하철</h3>
                             <ul>
-                            	<li>3호선양재역/신분당선 양재역 - 9번출구</li>
+                            	<li class="SF-font">3호선양재역/신분당선 양재역 - 9번출구</li>
                             </ul>
 														<div class="de-icon circle small-size inline" style="background-color:#9400d3">
 							                            	<i class="de-icon-cab"></i>
 							                            </div>
-							                            <h3 class="inline">승용차</h3>
+							                            <h3 class="inline SF-font">승용차</h3>
 							                            <ul>
-							                            	<li>서초IC에서 양재역 방면으로 나오신후</li>
-															<li>양재지하차도로 진입하지 말고 양재역사거리에서 </li>
-															<li>성남방향으로 우회전합니다. </li>
-															<li>우회전후 60m 직진하시면 </li>
-															<li>우측에 엘블레스가 있습니다.</li>
+							                            	<li class="SF-font">서초IC에서 양재역 방면으로 나오신후</li>
+															<li class="SF-font">양재지하차도로 진입하지 말고 양재역사거리에서 </li>
+															<li class="SF-font">성남방향으로 우회전합니다. </li>
+															<li class="SF-font">우회전후 60m 직진하시면 </li>
+															<li class="SF-font">우측에 엘블레스가 있습니다.</li>
 							                            </ul>
                         </div>
 
@@ -532,16 +532,12 @@ var staticMap = new kakao.maps.StaticMap(staticMapContainer, staticMapOption);
                     	<div class="col-md-offset-2 col-md-8 text-center">
 
                         	<div class="section-title animation fadeInUp">
-                        		<h2>
+                        		<h2 class='SF-font'>
                             		고맙습니다.
                             	</h2>
-								<h1>모바일기능</h1>
-<h2>모바일에서 전화걸기</h2>
-<p><a href="tel:01034472936">전화걸기</a></p>
 
-<h2>모바일에서 문자보내기</h2>
-<p><a href="sms:01034472936">문자보내기</a></p>
-
+                        		<h3 class='SF-font'>
+                            		공유하기    
 <a id="create-kakao-link-btn" href="javascript:;">
   <img
     src="https://developers.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png"
@@ -554,6 +550,7 @@ var staticMap = new kakao.maps.StaticMap(staticMapContainer, staticMapOption);
     requestUrl: 'https://kimysub.github.io/wedding.github.io',
   })
 </script>
+              </h3>
 
 
                           	</div>
@@ -599,7 +596,7 @@ var staticMap = new kakao.maps.StaticMap(staticMapContainer, staticMapOption);
                         					<span class="white-line"></span>
                         				</div>
 
-										<div id="footer-couple-name" class="animation delay1 fadeInUp">
+										<div id="footer-couple-name" class="SF-font animation delay1 fadeInUp">
                                 			이슬 & 영섭
                                 		</div>
 
