--- a/index.html
+++ b/index.html
@@ -470,10 +470,10 @@ var staticMap = new kakao.maps.StaticMap(staticMapContainer, staticMapOption);
 
                             	<ul><h3 class="SF-font">엘블레스</h3>
                             	<li class="SF-font">서울특별시 서초구 강남대로 213번지</li>
-                            	<li class="SF-font">(스포타임 지하1층)</li>
-                            	<li class="SF-font">TEL 02.526.0300
-								<a href="tel:025260300"><img src="./images/call.png" width=15 alt=""></a>
-								</li>
+                            	<p class="SF-font">   (스포타임 지하1층)</p>
+                            	<p class="SF-font">   TEL 02.526.0300
+								<a href="tel:025260300"><img src="./images/call.png" width=10 alt=""></a>
+								</p>
 								</ul>
 
 
@@ -499,10 +499,10 @@ var staticMap = new kakao.maps.StaticMap(staticMapContainer, staticMapOption);
 							                            <h3 class="inline SF-font">승용차</h3>
 							                            <ul>
 							                            	<li class="SF-font">서초IC에서 양재역 방면으로 나오신후</li>
-															<li class="SF-font">양재지하차도로 진입하지 말고 양재역사거리에서 </li>
-															<li class="SF-font">성남방향으로 우회전합니다. </li>
-															<li class="SF-font">우회전후 60m 직진하시면 </li>
-															<li class="SF-font">우측에 엘블레스가 있습니다.</li>
+															<p class="SF-font"> 양재지하차도로 진입하지 말고 양재역사거리에서 </p>
+															<p class="SF-font"> 성남방향으로 우회전합니다. </p>
+															<p class="SF-font"> 우회전후 60m 직진하시면 </p>
+															<p class="SF-font"> 우측에 엘블레스가 있습니다.</p>
 							                            </ul>
                         </div>
 
@@ -540,7 +540,7 @@ var staticMap = new kakao.maps.StaticMap(staticMapContainer, staticMapOption);
                             		공유하기    
 <a id="create-kakao-link-btn" href="javascript:;">
   <img
-    src="https://developers.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png"
+    src="https://developers.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png" width=30
   />
 </a>
 <script type="text/javascript">
@@ -596,7 +596,7 @@ var staticMap = new kakao.maps.StaticMap(staticMapContainer, staticMapOption);
                         					<span class="white-line"></span>
                         				</div>
 
-										<div id="footer-couple-name" class="SF-font animation delay1 fadeInUp">
+										<div id="footer-couple-name" class="animation delay1 fadeInUp">
                                 			이슬 & 영섭
                                 		</div>
 
