--- a/index.html
+++ b/index.html
@@ -469,11 +469,11 @@ var staticMap = new kakao.maps.StaticMap(staticMapContainer, staticMapOption);
 </div>
 
                             	<ul><h3 class="SF-font">엘블레스</h3>
-                            	<li class="SF-font">서울특별시 서초구 강남대로 213번지</li>
-                            	<p class="SF-font">   (스포타임 지하1층)</p>
+                            	<li class="SF-font">서울특별시 서초구 강남대로 213번지<br>
+                            	<p class="SF-font">   (스포타임 지하1층)<br>
                             	<p class="SF-font">   TEL 02.526.0300
 								<a href="tel:025260300"><img src="./images/call.png" width=10 alt=""></a>
-								</p>
+								</li>
 								</ul>
 
 
@@ -498,11 +498,11 @@ var staticMap = new kakao.maps.StaticMap(staticMapContainer, staticMapOption);
 							                            </div>
 							                            <h3 class="inline SF-font">승용차</h3>
 							                            <ul>
-							                            	<li class="SF-font">서초IC에서 양재역 방면으로 나오신후</li>
-															<p class="SF-font"> 양재지하차도로 진입하지 말고 양재역사거리에서 </p>
-															<p class="SF-font"> 성남방향으로 우회전합니다. </p>
-															<p class="SF-font"> 우회전후 60m 직진하시면 </p>
-															<p class="SF-font"> 우측에 엘블레스가 있습니다.</p>
+							                            	<li class="SF-font">서초IC에서 양재역 방면으로 나오신후<br>
+															 양재지하차도로 진입하지 말고 양재역사거리에서 <br>
+															 성남방향으로 우회전합니다. <br>
+															 우회전후 60m 직진하시면 <br>
+															 우측에 엘블레스가 있습니다.</li>
 							                            </ul>
                         </div>
 
