--- a/index.html
+++ b/index.html
@@ -470,8 +470,8 @@ var staticMap = new kakao.maps.StaticMap(staticMapContainer, staticMapOption);
 
                             	<ul><h3 class="SF-font">엘블레스</h3>
                             	<li class="SF-font">서울특별시 서초구 강남대로 213번지<br>
-                            	<p class="SF-font">   (스포타임 지하1층)<br>
-                            	<p class="SF-font">   TEL 02.526.0300
+                            	   (스포타임 지하1층)<br>
+                            	   TEL 02.526.0300
 								<a href="tel:025260300"><img src="./images/call.png" width=10 alt=""></a>
 								</li>
 								</ul>
