--- a/index.html
+++ b/index.html
@@ -405,12 +405,14 @@
                 	<div class="row">
 
                         <!-- SECTION TITLE -->
+                    	<div class="col-md-12 text-center">
 
                         	<div class="section-title animation fadeInUp">
                         		<h2 class="SF-font">
                             		<img src="images/heart7.png" width="50" alt=""> 시간과 장소
                             	</h2>
                           	</div>
+                          </div>
                    </div> <!-- END of ROW-1 -->
 
                    <!-- ROW-2 -->
@@ -527,6 +529,7 @@ var staticMap = new kakao.maps.StaticMap(staticMapContainer, staticMapOption);
                 	<div class="row">
 
                         <!-- SECTION TITLE -->
+                    	<div class="col-md-offset-2 col-md-8 text-center">
 
                         	<div class="section-title animation fadeInUp">
                         		<h2 class='SF-font'>
@@ -551,6 +554,7 @@ var staticMap = new kakao.maps.StaticMap(staticMapContainer, staticMapOption);
 
 
                           	</div>
+                         </div>
                    </div> <!-- END of ROW-1 -->
 
 
