--- a/index.html
+++ b/index.html
@@ -215,6 +215,21 @@
                 </div>
             </section>
 
+            <!--COUPLE SECTION-->
+            <section id="parents">
+                <div class="container">
+                	<div class="row">
+                        <!-- SECTION CONTENT -->
+                    	<div class="col-md-6">
+                            <div class="parents-name">
+                        		<h2 class="SF-font text-center">신랑측 혼주              신부측 혼주         
+								</h2>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
 
             <!-- PHOTO DIVIDER -->
             <section id="photo-divider-1">
