--- a/index.html
+++ b/index.html
@@ -213,23 +213,34 @@
                         </div>
                     </div>
                 </div>
-            </section>
 
-            <!--COUPLE SECTION-->
-            <section id="parents">
                 <div class="container">
                 	<div class="row">
                         <!-- SECTION CONTENT -->
                     	<div class="col-md-6">
-                            <div class="parents-name">
-                        		<h2 class="SF-font text-center">신랑측 혼주              신부측 혼주         
+                            <div class="his-her-name">
+                        		<h2 class="SF-font text-center">신랑측 혼주          
+                        		<h3 class="SF-font text-center">신랑측 혼주          
+								<a href="tel:01023868083"><img src="./images/call.png" width=50 alt=""></a>
+								<a href="sms:01023868083"><img src="./images/sms.png" width=50 alt=""></a>
+								</h2>
+                                <div class="heart-wrapper">
+                            		<div><img src="images/heart7.png" width="50" alt=""></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="his-her-name">
+                        		<h2 class="SF-font text-center">신부측 혼주 
+                        		<h3 class="SF-font text-center">신부측 혼주 
+								<a href="tel:01034472936"><img src="./images/call.png" width=50 alt=""></a>
+								<a href="sms:01034472936"><img src="./images/sms.png" width=50 alt=""></a>
 								</h2>
                             </div>
                         </div>
                     </div>
                 </div>
             </section>
-
 
             <!-- PHOTO DIVIDER -->
             <section id="photo-divider-1">
