--- a/index.html
+++ b/index.html
@@ -200,6 +200,9 @@
                                 <div class="heart-wrapper">
                             		<div><img src="images/heart7.png" width="50" alt=""></div>
                                 </div>
+                                <div class="heart-below">
+                            		<div><img src="images/heart7.png" width="50" alt=""></div>
+                                </div>
                             </div>
                         </div>
                         <div class="col-md-6">
