--- a/index.html
+++ b/index.html
@@ -193,18 +193,18 @@
                     	<div class="col-md-6">
 
                             <div class="his-her-name">
-                        		<h2 class="SF-font text-center">신랑 김영섭         
+                        		<h2 class="SF-font text-center">
+									<span style="font-size: 80%;>신랑 
+									<span style="font-size: 100%;>김영섭         
 								<a href="tel:01023868083"><img src="./images/call.png" width=50 alt=""></a>
 								<a href="sms:01023868083"><img src="./images/sms.png" width=50 alt=""></a>
 								</h2>
                                 <div class="heart-wrapper">
                             		<div><img src="images/heart7.png" width="50" alt=""></div>
                                 </div>
-                                <div class="heart-below">
-                            		<div><img src="images/heart7.png" width="50" alt=""></div>
-                                </div>
                             </div>
                         </div>
+                        <div><img src="images/heart7.png" width="50" alt=""></div>
                         <div class="col-md-6">
                             <div class="his-her-name">
                         		<h2 class="SF-font text-center">신부 정이슬
