--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
 
                             <div class="his-her-name">
                         		<h2 class="SF-font text-center">
-									<span style="font-size: 80%;>신랑 
-									<span style="font-size: 100%;>김영섭         
+									<span style="font-size: 80%;>신랑 </span>
+									<span style="font-size: 100%;>김영섭</span>         
 								<a href="tel:01023868083"><img src="./images/call.png" width=50 alt=""></a>
 								<a href="sms:01023868083"><img src="./images/sms.png" width=50 alt=""></a>
 								</h2>
@@ -204,7 +204,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div><img src="images/heart7.png" width="50" alt=""></div>
+                            		<h1><img src="images/heart7.png" width="50" alt=""></h1>
                         <div class="col-md-6">
                             <div class="his-her-name">
                         		<h2 class="SF-font text-center">신부 정이슬
